Complete refactor and rewrite and move to org.unigrid.nativecdi
The previous method no longer works with either new versions of CDI or
GraalVM. The prefered approach to get everything to work is probably to
use a GraalVM feature (@AutomaticFeature).

This implements a first prototype. This still needs a lot of work, but
the general idea is to introduce a "weld-proxies.json" that specifices how
CDI proxy objects are constructed.

This is done in a somewhat similar way in Oracles Helidon to get CDI
to "work".

--- a/pom.xml
+++ b/pom.xml
@@ -1,108 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mycompany</groupId>
-    <artifactId>graalvm-weld-test</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
-    <dependencies>
-        <dependency>  
-            <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se-core</artifactId>
-            <version>3.0.4.Final</version>
-        </dependency>  
-        <dependency>
-            <groupId>com.oracle.svm</groupId>
-            <artifactId>svm</artifactId>
-            <version>GraalVM-1.0.0-rc2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.graalvm</groupId>
-            <artifactId>graal-sdk</artifactId>
-            <version>1.0.0-rc2</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.22</version>
-            <type>jar</type>
-        </dependency>
+	<name>Native CDI Playground</name>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.unigrid</groupId>
+	<artifactId>nativecdi</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+	<dependencies>
+		<dependency>  
+			<groupId>org.jboss.weld.se</groupId>
+			<artifactId>weld-se-core</artifactId>
+			<version>4.0.2.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.graalvm.sdk</groupId>
+			<artifactId>graal-sdk</artifactId>
+			<version>22.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.22</version>
+			<type>jar</type>
+		</dependency>
         
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.22</version>
-        </dependency>
-
-    </dependencies>
-    
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>net.saga.graalvm.weld.test.Main</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.1</version>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <overWriteReleases>false</overWriteReleases>
-                            <overWriteSnapshots>false</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>1.6</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.22</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.12.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.geronimo.arthur</groupId>
+			<artifactId>arthur-spi</artifactId>
+			<version>1.0.5</version>
+		</dependency>
+		<!--<dependency>
+			<groupId>io.helidon.integrations.graal</groupId>
+			<artifactId>helidon-graal-native-image-extension</artifactId>
+			<version>3.0.2</version>
+		</dependency>-->
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.24</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.2</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>net.saga.graalvm.weld.test.Main</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.1.1</version>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.geronimo.arthur</groupId>
+				<artifactId>arthur-maven-plugin</artifactId>
+				<version>1.0.5</version>
+				<configuration>
+					<main>net.saga.graalvm.weld.test.Main</main>
+					<graalVersion>22.3.0</graalVersion>
+					<enableAllSecurityServices>false</enableAllSecurityServices>
+					<!--<reflectionConfigurationFiles>
+						<reflectionConfigurationFiles>${project.build.directory}/classes/reflection.json</reflectionConfigurationFiles>
+					</reflectionConfigurationFiles>-->
+					<initializeAtBuildTime>
+						<initializeAtBuildTime>org.jboss.weld.bootstrap.api.helpers.RegistrySingletonProvider</initializeAtBuildTime>
+						<initializeAtBuildTime>net.saga.graalvm.weld.test.BuildTimeLoggerInit</initializeAtBuildTime>
+						<initializeAtBuildTime>org.jboss.weld.environment.se.WeldContainer</initializeAtBuildTime>
+						<initializeAtBuildTime>org.jboss.weld.environment.logging</initializeAtBuildTime>
+					</initializeAtBuildTime>
+					<!--<dynamicProxyConfigurationFiles>
+						<dynamicProxyConfigurationFiles>${project.build.directory}/classes/proxy.json</dynamicProxyConfigurationFiles>
+					</dynamicProxyConfigurationFiles>-->
+					<customOptions>
+						<customOptions>-H:IncludeResources=".*/META-INF/services/javax.enterprise.inject.se.SeContainerInitializer"</customOptions>
+						<customOptions>-H:IncludeResources=".*/META-INF/services/javax.enterprise.inject.spi.CDIProvider"</customOptions>
+						<customOptions>-H:IncludeResources=".*/META-INF/services/javax.enterprise.inject.spi.Extension"</customOptions>
+						<customOptions>-H:Log=registerResource:3</customOptions>
+						<customOptions>-Dorg.slf4j.simpleLogger.defaultLogLevel=trace</customOptions>
+						<!--<customOptions>-H:ConfigurationFileDirectories=${project.build.directory}/../graal-trace3</customOptions>
+						<customOptions>-H:PredefinedClassesConfigurationFiles=${project.build.directory}/../graal-trace3/predefined-classes-config.json</customOptions>-->
+						<!--<customOptions>-O0</customOptions>-->
+					</customOptions>
+					<!--<printClassInitialization>true</printClassInitialization>-->
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
