Add a resources file with beans.xml
Not strictly needed, as discovery has to be disabled anyway, but for the
sake of experimentation, we add it to the native image.

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,9 @@
 						<customOptions>-H:PredefinedClassesConfigurationFiles=${project.build.directory}/../graal-trace3/predefined-classes-config.json</customOptions>-->
 						<!--<customOptions>-O0</customOptions>-->
 					</customOptions>
+					<resourcesConfigurationFiles>
+					<resourcesConfigurationFiles>${project.build.directory}/classes/resources.json</resourcesConfigurationFiles>
+					</resourcesConfigurationFiles>
 					<!--<printClassInitialization>true</printClassInitialization>-->
 				</configuration>
 			</plugin>
