While still wrapped wrong, GraalVM now properly finds our beans
This is achieved by implementing a specialized ProxyService for native
Graal images. In the next step, this now needs to be combined with a
Graal "Feature" or a Arthur extension where we register these bean
classes and their wrapped proxy objects. For this simple test to run we
need to wrap the following:

Application => ProxyObject(Application) / WeldClientProxy(Application)
Event => WeldProxy(Event)
Instance => WeldProxy(Instance)

--- a/pom.xml
+++ b/pom.xml
@@ -112,15 +112,20 @@
 				<configuration>
 					<main>org.unigrid.nativecdi.Main</main>
 					<graalVersion>22.3.0</graalVersion>
-					<enableAllSecurityServices>false</enableAllSecurityServices>
-					<!--<reflectionConfigurationFiles>
+					<enableAllSecurityServices>true</enableAllSecurityServices>
+					<reflectionConfigurationFiles>
 						<reflectionConfigurationFiles>${project.build.directory}/classes/reflection.json</reflectionConfigurationFiles>
-					</reflectionConfigurationFiles>-->
+					</reflectionConfigurationFiles>
 					<initializeAtBuildTime>
 						<initializeAtBuildTime>org.jboss.weld.bootstrap.api.helpers.RegistrySingletonProvider</initializeAtBuildTime>
 						<initializeAtBuildTime>net.saga.graalvm.weld.test.BuildTimeLoggerInit</initializeAtBuildTime>
 						<initializeAtBuildTime>org.jboss.weld.environment.se.WeldContainer</initializeAtBuildTime>
-						<initializeAtBuildTime>org.jboss.weld.environment.logging</initializeAtBuildTime>
+						<initializeAtBuildTime>org.jboss.weld.bean.proxy.CommonProxiedMethodFilters</initializeAtBuildTime>
+						<initializeAtBuildTime>org.jboss.weld.bean.proxy.ProxyFactory</initializeAtBuildTime>
+						<initializeAtBuildTime>org.jboss.weld.bean.proxy.GroovyMethodFilter</initializeAtBuildTime>
+						<initializeAtBuildTime>org.jboss.weld.util.collections.ImmutableHashSet</initializeAtBuildTime>
+						<initializeAtBuildTime>org.jboss.weld.Container</initializeAtBuildTime>
+						<!--<initializeAtBuildTime>org.jboss.weld.logging.BeanManagerLogger</initializeAtBuildTime>-->
 					</initializeAtBuildTime>
 					<!--<dynamicProxyConfigurationFiles>
 						<dynamicProxyConfigurationFiles>${project.build.directory}/classes/proxy.json</dynamicProxyConfigurationFiles>
@@ -131,6 +136,7 @@
 						<customOptions>-H:IncludeResources=".*/META-INF/services/javax.enterprise.inject.spi.Extension"</customOptions>
 						<customOptions>-H:Log=registerResource:3</customOptions>
 						<customOptions>-Dorg.slf4j.simpleLogger.defaultLogLevel=trace</customOptions>
+						<customOptions>--trace-class-initialization=org.jboss.weld.bean.proxy.ProxyFactory</customOptions>
 						<!--<customOptions>-H:ConfigurationFileDirectories=${project.build.directory}/../graal-trace3</customOptions>
 						<customOptions>-H:PredefinedClassesConfigurationFiles=${project.build.directory}/../graal-trace3/predefined-classes-config.json</customOptions>-->
 						<!--<customOptions>-O0</customOptions>-->
