--- a/pom.xml
+++ b/pom.xml
@@ -1,151 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<name>Native CDI Playground</name>
+	<name>Native CDI Playground Parent</name>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.unigrid</groupId>
-	<artifactId>nativecdi</artifactId>
+	<artifactId>nativecdi-parent</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
-	<dependencies>
-		<dependency>  
-			<groupId>org.jboss.weld.se</groupId>
-			<artifactId>weld-se-core</artifactId>
-			<version>5.1.0.Final</version>
-		</dependency>
-		<dependency>
-			<groupId>org.graalvm.sdk</groupId>
-			<artifactId>graal-sdk</artifactId>
-			<version>22.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.22</version>
-			<type>jar</type>
-		</dependency>
-        
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.22</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>2.12.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.24</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.geronimo.arthur</groupId>
-			<artifactId>arthur-spi</artifactId>
-			<version>1.0.5</version>
-		</dependency>
-		<!--<dependency>
-			<groupId>io.helidon.integrations.graal</groupId>
-			<artifactId>helidon-graal-native-image-extension</artifactId>
-			<version>3.0.2</version>
-		</dependency>-->
-	</dependencies>
+	<modules>
+		<module>application</module>
+		<module>knight-weld</module>
+	</modules>
 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>1.18.24</version>
-						</path>
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>net.saga.graalvm.weld.test.Main</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.1.1</version>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-							<overWriteReleases>false</overWriteReleases>
-							<overWriteSnapshots>false</overWriteSnapshots>
-							<overWriteIfNewer>true</overWriteIfNewer>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.geronimo.arthur</groupId>
-				<artifactId>arthur-maven-plugin</artifactId>
-				<version>1.0.5</version>
-				<configuration>
-					<main>org.unigrid.nativecdi.Main</main>
-					<graalVersion>22.3.0</graalVersion>
-					<enableAllSecurityServices>true</enableAllSecurityServices>
-					<reflectionConfigurationFiles>
-						<reflectionConfigurationFiles>${project.build.directory}/classes/reflection.json</reflectionConfigurationFiles>
-					</reflectionConfigurationFiles>
-					<initializeAtBuildTime>
-						<initializeAtBuildTime>org.jboss.weld.bootstrap.api.helpers.RegistrySingletonProvider</initializeAtBuildTime>
-						<initializeAtBuildTime>net.saga.graalvm.weld.test.BuildTimeLoggerInit</initializeAtBuildTime>
-						<initializeAtBuildTime>org.jboss.weld.environment.se.WeldContainer</initializeAtBuildTime>
-						<initializeAtBuildTime>org.jboss.weld.bean.proxy.CommonProxiedMethodFilters</initializeAtBuildTime>
-						<initializeAtBuildTime>org.jboss.weld.bean.proxy.ProxyFactory</initializeAtBuildTime>
-						<initializeAtBuildTime>org.jboss.weld.bean.proxy.GroovyMethodFilter</initializeAtBuildTime>
-						<initializeAtBuildTime>org.jboss.weld.util.collections.ImmutableHashSet</initializeAtBuildTime>
-						<!--<initializeAtBuildTime>org.jboss.weld.Container</initializeAtBuildTime>-->
-						<initializeAtBuildTime>org.jboss.logging.JDKLevel</initializeAtBuildTime>
-						<!--<initializeAtBuildTime>org.jboss.weld.logging.BeanManagerLogger</initializeAtBuildTime>-->
-					</initializeAtBuildTime>
-					<!--<dynamicProxyConfigurationFiles>
-						<dynamicProxyConfigurationFiles>${project.build.directory}/classes/proxy.json</dynamicProxyConfigurationFiles>
-					</dynamicProxyConfigurationFiles>-->
-					<customOptions>
-						<customOptions>-H:IncludeResources=".*/META-INF/services/javax.enterprise.inject.se.SeContainerInitializer"</customOptions>
-						<customOptions>-H:IncludeResources=".*/META-INF/services/javax.enterprise.inject.spi.CDIProvider"</customOptions>
-						<customOptions>-H:IncludeResources=".*/META-INF/services/javax.enterprise.inject.spi.Extension"</customOptions>
-						<customOptions>-H:Log=registerResource:3</customOptions>
-						<customOptions>-Dorg.slf4j.simpleLogger.defaultLogLevel=trace</customOptions>
-						<customOptions>--trace-object-instantiation=org.jboss.weld.event.ObserverNotifier$ObserverExceptionHandler$$Lambda$660/0x00000007c113b440</customOptions>
-						<!--<customOptions>-H:ConfigurationFileDirectories=${project.build.directory}/../graal-trace3</customOptions>
-						<customOptions>-H:PredefinedClassesConfigurationFiles=${project.build.directory}/../graal-trace3/predefined-classes-config.json</customOptions>-->
-						<!--<customOptions>-O0</customOptions>-->
-					</customOptions>
-					<resourcesConfigurationFiles>
-						<resourcesConfigurationFiles>${project.build.directory}/classes/resources.json</resourcesConfigurationFiles>
-					</resourcesConfigurationFiles>
-					<!--<printClassInitialization>true</printClassInitialization>-->
 				</configuration>
 			</plugin>
 		</plugins>
