--- a/native-image/pom.xml
+++ b/native-image/pom.xml
@@ -13,8 +13,6 @@
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
 		<surefireArgLine />
 	</properties>
 	<dependencies>
@@ -61,8 +59,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+					<release>17</release>
 					<showDeprecation>true</showDeprecation>
 				</configuration>
 			</plugin>
