--- a/native-image/pom.xml
+++ b/native-image/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>arthur-api</artifactId>
 			<version>1.0.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.unigrid.hedgehog</groupId>
+			<artifactId>application</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -77,6 +82,24 @@
 								<descriptorRef>jar-with-dependencies</descriptorRef>
 							</descriptorRefs>
 						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.tentackle</groupId>
+				<artifactId>tentackle-jlink-maven-plugin</artifactId>
+				<version>17.12.0.0</version>
+				<configuration>
+					<mainClass>org.unigrid.hedgehog.nativeimage.NativeImage</mainClass>
+					<stripDebug>true</stripDebug>
+					<excludeModules>jdk.jfr</excludeModules>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jlink</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
