--- a/native-image/pom.xml
+++ b/native-image/pom.xml
@@ -15,6 +15,29 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<surefireArgLine />
 	</properties>
+	<profiles>
+		<profile>
+			<id>Linux</id>
+			<activation><os><name>Linux</name></os></activation>
+			<properties>
+				<executable.name>hedgehog.bin</executable.name>
+			</properties>
+		</profile>
+		<profile>
+			<id>Windows</id>
+			<activation><os><family>Windows</family></os></activation>
+			<properties>
+				<executable.name>hedgehog.exe</executable.name>
+			</properties>
+		</profile>
+		<profile>
+			<id>MacOS</id>
+			<activation><os><family>MacOS</family></os></activation>
+			<properties>
+				<executable.name>hedgehog.bin</executable.name>
+			</properties>
+		</profile>
+	</profiles>
 	<dependencies>
 		<dependency>
 			<groupId>org.graalvm.sdk</groupId>
@@ -22,13 +45,8 @@
 			<version>22.3.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.geronimo.arthur</groupId>
-			<artifactId>arthur-api</artifactId>
-			<version>1.0.5</version>
-		</dependency>
-		<dependency>
 			<groupId>org.unigrid.hedgehog</groupId>
-			<artifactId>application</artifactId>
+			<artifactId>hedgehog</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
@@ -104,13 +122,46 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.4.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>properties</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.geronimo.arthur</groupId>
 				<artifactId>arthur-maven-plugin</artifactId>
 				<version>1.0.5</version>
 				<configuration>
 					<main>org.unigrid.hedgehog.nativeimage.NativeImage</main>
-					<graalVersion>22.3.0</graalVersion>
+					<graalVersion>22.3.0.r17</graalVersion>
+					<allowIncompleteClasspath>true</allowIncompleteClasspath>
+					<classpath>
+						<classpath>${org.graalvm.sdk:graal-sdk:jar}</classpath>
+						<classpath>${project.build.directory}/classes</classpath>
+					</classpath>
+					<otherFiles>
+						<otherFile>${project.build.directory}/${project.artifactId}-${project.version}-jlink.zip</otherFile>
+					</otherFiles>
+					<output>${project.build.directory}/${executable.name}</output>
+					<customOptions>
+						<customOption>--features=org.unigrid.hedgehog.nativeimage.BundleFeature</customOption>
+					</customOptions>
 				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>native-image</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
