--- a/application/pom.xml
+++ b/application/pom.xml
@@ -18,11 +18,7 @@
 	<profiles>
 		<profile>
 			<id>Linux</id>
-			<activation>
-				<os>
-					<name>Linux</name>
-				</os>
-			</activation>
+			<activation><os><name>Linux</name></os></activation>
 			<dependencies>
 				<dependency>
 					<groupId>io.netty.incubator</groupId>
@@ -30,20 +26,11 @@
 					<version>0.0.33.Final</version>
 					<classifier>linux-x86_64</classifier>
 				</dependency>
-				<dependency>
-					<groupId>org.lmdbjava</groupId>
-					<artifactId>lmdbjava-native-linux-x86_64</artifactId>
-					<version>0.9.29-1</version>
-				</dependency>
 			</dependencies>
 		</profile>
 		<profile>
 			<id>Windows</id>
-			<activation>
-				<os>
-					<family>Windows</family>
-				</os>
-			</activation>
+			<activation><os><family>Windows</family></os></activation>
 			<dependencies>
 				<dependency>
 					<groupId>io.netty.incubator</groupId>
@@ -51,31 +38,17 @@
 					<version>0.0.33.Final</version>
 					<classifier>windows-x86_64</classifier>
 				</dependency>
-				<dependency>
-					<groupId>org.lmdbjava</groupId>
-					<artifactId>lmdbjava-native-windows-x86_64</artifactId>
-					<version>0.9.29-1</version>
-				</dependency>
 			</dependencies>
 		</profile>
 		<profile>
 			<id>MacOS</id>
-			<activation>
-				<os>
-					<family>MacOS</family>
-				</os>
-			</activation>
+			<activation><os><family>MacOS</family></os></activation>
 			<dependencies>
 				<dependency>
 					<groupId>io.netty.incubator</groupId>
 					<artifactId>netty-incubator-codec-native-quic</artifactId>
 					<version>0.0.33.Final</version>
 					<classifier>osx-x86_64</classifier>
-				</dependency>
-				<dependency>
-					<groupId>org.lmdbjava</groupId>
-					<artifactId>lmdbjava-native-osx-x86_64</artifactId>
-					<version>0.9.29-1</version>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -218,16 +191,6 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
-		</dependency>
-		<!--<dependency>
-			<groupId>net.openhft</groupId>
-			<artifactId>chronicle-map</artifactId>
-			<version>3.23ea1</version>
-		</dependency>-->
-		<dependency>
-			<groupId>org.lmdbjava</groupId>
-			<artifactId>lmdbjava</artifactId>
-			<version>0.8.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolvedbinary.j8fu</groupId>
