--- a/native-image/pom.xml
+++ b/native-image/pom.xml
@@ -27,7 +27,15 @@
 			<id>Windows</id>
 			<activation><os><family>Windows</family></os></activation>
 			<properties>
-				<executable.name>hedgehog.exe</executable.name>
+				<executable.name>hedgehog</executable.name>
+                                <url>https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-22.3.0/graalvm-ce-java17-windows-amd64-22.3.0.zip</url>
+                                <platform>windows</platform>
+                                <unzipLocation>${basedir}\target\unziped</unzipLocation>
+                                <downloadName>graal.zip</downloadName>
+                                <downloadLocation>${basedir}\target\download/</downloadLocation>
+                                <localInstaller>${unzipLocation}\graalvm-ce-java17-22.3.0\bin\gu.cmd</localInstaller>
+                                <localNative>${unzipLocation}\graalvm-ce-java17-22.3.0\bin\native-image.cmd</localNative>
+                                <windowsDependecies>com.sun.jna.platform.win32</windowsDependecies>
 			</properties>
 		</profile>
 		<profile>
@@ -68,6 +76,16 @@
 			<groupId>net.harawata</groupId>
 			<artifactId>appdirs</artifactId>
 		</dependency>
+                <dependency>
+                    <groupId>net.java.dev.jna</groupId>
+                    <artifactId>jna</artifactId>
+                    <version>5.8.0</version>
+                </dependency>
+                <dependency>
+                    <groupId>net.java.dev.jna</groupId>
+                    <artifactId>jna-platform</artifactId>
+                    <version>5.8.0</version>
+                </dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -153,6 +171,65 @@
 					</execution>
 				</executions>
 			</plugin>
+                        <plugin>
+                            <groupId>com.googlecode.maven-download-plugin</groupId>
+                            <artifactId>download-maven-plugin</artifactId>
+                            <version>1.6.8</version>
+                            <executions>
+                                <execution>
+                                    <phase>process-resources</phase>
+                                    <goals>
+                                        <goal>wget</goal>
+                                    </goals>
+                                    <configuration>
+                                        <url>${url}</url>
+                                        <outputFileName>${downloadName}</outputFileName>
+                                        <outputDirectory>${downloadLocation}</outputDirectory>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-antrun-plugin</artifactId>
+                            <version>3.1.0</version>
+                            <executions>
+                                <execution>
+                                    <id>default-cli</id>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>run</goal>
+                                    </goals>
+                                    <configuration>
+                                        <target>                                  
+                                            <unzip src="${downloadLocation}${downloadName}" dest="${unzipLocation}"/>
+                                            <!--<exec executable="cmd">
+                                                <arg value="/c"/>
+                                                <arg value="${localInstaller}"/>
+                                                <arg value="install native-image"/>
+                                            </exec>-->
+                                        </target>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>exec-maven-plugin</artifactId>
+                            <version>3.1.0</version>
+                            <executions>
+                                <execution>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>exec</goal>
+                                    </goals>
+                                    <configuration>
+                                        <executable>${localInstaller}</executable>
+                                        <commandlineArgs>install native-image</commandlineArgs>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
 			<plugin>
 				<groupId>org.apache.geronimo.arthur</groupId>
 				<artifactId>arthur-maven-plugin</artifactId>
@@ -172,15 +249,33 @@
 						<classpath>${org.slf4j:slf4j-api:jar}</classpath>
 						<classpath>${ch.qos.logback:logback-core:jar}</classpath>
 						<classpath>${ch.qos.logback:logback-classic:jar}</classpath>
+                                               <classpath>${net.java.dev.jna:jna-platform:jar}</classpath>
+                                               <classpath>${net.java.dev.jna:jna:jar}</classpath>
 					</classpath>
-					<otherFiles>
+                                        <includeNatives>true</includeNatives>
+                                        <addAllCharsets>true</addAllCharsets>
+                                        <!--<printClassInitialization>true</printClassInitialization>-->
+                                        <otherFiles>
 						<otherFile>${project.build.directory}/${project.artifactId}-${project.version}-jlink.zip</otherFile>
 					</otherFiles>
 					<output>${project.build.directory}/${executable.name}</output>
-					<customOptions>
+                                        <reflectionConfigurationFiles>${basedir}/src/main/resources/META-INF/native-image/reflect-config.json</reflectionConfigurationFiles>
+                                        <resourcesConfigurationFiles>${basedir}/src/main/resources/META-INF/native-image/resource-config.json</resourcesConfigurationFiles>
+                                        <customOptions>
+                                                <customOption>-g</customOption>
+                                                <customOption>-O0</customOption>
+                                                <customOption>-Djna.debug_load=true</customOption>
+                                                <customOption>-Djna.debug_load.jna=true</customOption>
 						<customOption>--features=org.unigrid.hedgehog.nativeimage.BundleFeature</customOption>
+                                                <customOption>--trace-class-initialization=com.sun.jna.CallbackReference$AttachOptions</customOption>
 						<customOption>-H:IncludeResources=application.properties</customOption>
-					</customOptions>
+                                                
+                                                <customOption>-H:+JNI</customOption>
+                                                <customOption>-H:JNIConfigurationFiles=${basedir}/src/main/resources/META-INF/native-image/jni-config.json</customOption>
+                                                <customOption>-H:DynamicProxyConfigurationFiles=${basedir}/src/main/resources/META-INF/native-image/proxy-config.json</customOption>
+					
+                                        </customOptions>
+                                        <nativeImage>${localNative}</nativeImage>
 				</configuration>
 				<executions>
 					<execution>
